--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: "2"
 services:
   tor-socks-proxy:
     container_name: tor-socks-proxy
-    image: peterdavehello/tor-socks-proxy:latest
+    image: registry-1.docker.io/jackysedi/tor-socks-proxy/tor-socks-proxy:latest
     ports:
       - "127.0.0.1:9150:9150"
     restart: unless-stopped
