--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ version: "2"
 services:
   tor-socks-proxy:
     container_name: tor-socks-proxy
+    hostname: tor-socks-proxy
     image: registry-1.docker.io/jackysedi/tor-socks-proxy:latest
     ports:
       - "127.0.0.1:9150:9150"
@@ -11,4 +12,5 @@ services:
     
   test:
     container_name: test
+    hostname: test
     image: test:latest
